starlark-rust/starlark_syntax/src/syntax/def_tests/star_then_kwargs.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark --lib
# ```

Program:
def test(x, *, **kwargs): pass

Error: error: `*` must be followed by named parameter
 --> test.star:1:16
  |
1 | def test(x, *, **kwargs): pass
  |                ^^^^^^^^
  |
